# LFX_Wasmedge_tool

./: .gitignore  CMakeLists.txt  README.md
cpp_code/: add_fac_fibo.cpp  float_add.cpp
src/: main.cpp  wasmedge_function.cpp
wasm_app/: add_fac_fibo.wasm  float_add.wasm
